fix overlap in question table

--- a/app/assets/stylesheets/models/questions.css.scss
+++ b/app/assets/stylesheets/models/questions.css.scss
@@ -3,6 +3,10 @@
     width: 100px;
   }
 
+  col.question {
+    width: 150px;
+  }
+
   col.age {
     width: 240px;
   }
